[package]
name = "apng"
version = "0.3.1"
authors = ["poccariswet <poccariswet2727@gmail.com>"]
edition = "2021"
description = "APNG Encoder. But it is tiny yet."
license = "MIT"
repository = "https://github.com/poccariswet/apng"
readme = "README.md"

[dependencies]
png = "0.17.13"
thiserror = "1.0.58"
byteorder = "1.5.0"
flate2 = "1.0.28"
image = { version = "0.25.0", default-features = false, features = ["png"] }
rayon = "1.9.0"
rayon_ordered_bridge = { git = "https://github.com/mitoma/sandbox", branch = "main" }
